<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MEGA_COM</string>
        
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">PEPE</string>
    <string name="botonOcultarActionBar">Ocultar</string>
    <string name="botonVerActionBar">Ver</string>
    
    <string name="manager_activity">MEGA_COM</string>
    
    <string name="search_files_and_folders">Search</string>
    
    
    <string name="login_activity">Login</string>
    <string name="login_text">Login</string>
    <string name="email_text">e-mail</string>
    <string name="password_text">password</string>
    <string name="abc">ABC</string>
    <string name="dots">···</string>
    <string name="new_to_mega">New to MEGA?</string>
    <string name="create_account">Create an account</string>
    
    <string name="create_account_activity">Create account</string>
    <string name="create_account_text">Create an account</string>
    <string name="name_text">name</string>
    <string name="tos">I agree with MEGA\'s &lt;a href="http://g.static.mega.co.nz/pages/terms.html"&gt;terms of service&lt;/a&gt;</string>
    <string name="button_create_account_text">Create account</string>
    <string name="already_account">Already have an account?</string>
	
	<string name="section_cloud_drive">Cloud Drive</string>
	<string name="section_saved_for_offline">Saved for Offline</string>
	<string name="section_shared_with_me">Shared with me</string>
	<string name="section_rubbish_bin">Rubbish Bin</string>
	<string name="section_contacts">Contacts</string>
	<string name="section_image_viewer">Image Viewer</string>
	<string name="section_transfers">Transfers</string>
	<string name="section_account">My Account</string>
	<string name="used_space">%1$s GB of %2$s GB</string>
	
	<string name="file_properties_activity">Properties</string>
	<string name="file_properties_available_offline">Available offline</string>
	<string name="file_properties_available_offline_on">ON</string>
	<string name="file_properties_available_offline_off">OFF</string>
	<string name="file_properties_info_size">Size: </string>
	<string name="file_properties_info_added">Added: </string>
	<string name="file_properties_info_modified">Modified: </string>
	
	<string name="contact_properties_activity">Contact</string>
	<string name="contact_properties_content">Content:</string>
	<string name="contact_properties_info_email">E-mail: </string>
	<string name="contact_properties_info_added">Added: </string>
	
	<string name="full_screen_image_viewer_label">Image Viewer</string>
	
</resources>