<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".CreateAccountActivity" >

	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        
	    <LinearLayout 
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="40dp" 
            android:background="@color/background" >
	
		    <TextView
		        android:id="@+id/createAccountTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="28sp"
		        android:textColor="@color/text_login"
		        android:text="@string/create_account_text"
		        android:layout_gravity="center" />
		    
		    <EditText
		        android:id="@+id/nameText"
		        android:inputType="text"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/name_text"
		        android:imeOptions="actionNext"
		        android:layout_gravity="center" 
		        style="@style/InputField" />	
		    
		    <EditText
		        android:id="@+id/emailText"
		        android:inputType="textEmailAddress"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/email_text"
		        android:imeOptions="actionNext"
		        android:layout_gravity="center" 
		        style="@style/InputField" />		
		    
		    <EditText
		        android:id="@+id/passwordText"
		        android:inputType="textPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/password_text"
		        android:imeOptions="actionDone"
		        android:layout_gravity="center"
		        style="@style/InputField" />
		    
		    <TableLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="left" >
		        
		        <TableRow>
		            
		            <CheckBox
				        android:id="@+id/chkTOS"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        style="@style/checkbox_MEGA" 
				        android:gravity="left|center_vertical" />
		            
		            <TextView
		                android:id="@+id/tos"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/tos" 
	                    android:gravity="left|center_vertical"
	                    android:layout_marginTop="5dp"
	                    android:layout_marginBottom="5dp"
	                    android:linksClickable="true" />
		    
		    		<!-- <TextView
	                    android:id="@+id/terms"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="5dp"
	                    android:textColor="@color/mega" 
	                    android:gravity="left|center_vertical"
	                    android:layout_marginTop="5dp"
	                    android:layout_marginBottom="5dp" /> -->
		        </TableRow>		        
		    </TableLayout>
		           
		    
             
		    <Button
		        android:id="@+id/btn_create_account"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/button_create_account_text" 
		        android:layout_gravity="center"
                android:onClick="onCreateAccountClick"
                style="@style/button_MEGA" />
		
		</LinearLayout>
		
	    <include layout="@layout/delimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            
            android:gravity="center_horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/text_login"
                android:text="@string/already_account"
                />
            
            <Button
                style="@style/button_MEGA_inverse"
                android:layout_gravity="center"
                android:onClick="onLoginClick"
                android:text="@string/login_text" >
            </Button>
            
        </LinearLayout>
	
	</LinearLayout>
	
</ScrollView>