<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".LoginActivity" >

	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        
	    <LinearLayout 
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="40dp" 
            android:background="@color/background" >
	
		    <TextView
		        android:id="@+id/loginTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="28sp"
		        android:textColor="@color/text_login"
		        android:text="@string/login_text"
		        android:layout_gravity="center" />
		    
		    <EditText
		        android:id="@+id/emailText"
		        android:inputType="textEmailAddress"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/email_text"
		        android:imeOptions="actionNext"
		        android:layout_gravity="center" 
		        style="@style/InputField" />		
		    
		    <EditText
		        android:id="@+id/passwordText"
		        android:inputType="textPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/password_text"
		        android:imeOptions="actionDone"
		        android:layout_gravity="center"
		        style="@style/InputField" />
		           
		    <TableLayout       		
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content" 
       		    android:layout_gravity="center" >
       		 	
		        <TableRow>
		            <TextView 
       			 	android:id="@+id/ABC"
       			 	android:layout_width="wrap_content"
       			 	android:layout_height="wrap_content"
       			 	android:text="@string/dots" 
       			 	android:textSize="40sp"  
       			 	android:layout_gravity="center_vertical|center_horizontal"
					android:layout_marginBottom="4dp"
			        android:layout_marginTop="0dp" 
			        android:textColor="@color/text_login"
			        />		
       			 
		            <com.mega.MySwitch
			        android:id="@+id/switch_login"
			        style="@style/mySwitchStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="0dp"
			        android:layout_marginRight="3dp"
			        android:layout_marginTop="8dp"
			        android:layout_marginLeft="1dp"
			        android:layout_gravity="center_vertical|center_horizontal"
			        mySwitch:textOff=""
			        mySwitch:textOn=""
			        mySwitch:textOnThumb="false"
			        mySwitch:thumb="@drawable/switch_thumb"
			        mySwitch:track="@drawable/switch_track" />
		            
		            <TextView 
       			 	android:id="@+id/points"
       			 	android:layout_width="wrap_content"
       			 	android:layout_height="wrap_content"
       			 	android:textSize="16sp"  
					android:layout_gravity="center_vertical|center_horizontal"
       			 	android:text="@string/abc"
       			 	android:layout_marginBottom="3dp"
			        android:layout_marginTop="0dp"
					android:textColor="@color/text_login"
       			 /> 
		        </TableRow>
            </TableLayout>
             
		    <Button
		        android:id="@+id/button_login_login"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/login_text" 
		        android:layout_gravity="center"
                style="@style/button_MEGA" />
		
		</LinearLayout>
		
	    <include layout="@layout/delimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            
            android:gravity="center_horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/text_login"
                android:text="@string/new_to_mega"
                />
            
            <Button
				android:id="@+id/button_create_account_login"
                style="@style/button_MEGA_inverse"
                android:layout_gravity="center"
                android:text="@string/create_account" >
            </Button>
            
        </LinearLayout>
	
	</LinearLayout>
	
</ScrollView>