<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rounded="http://schemas.android.com/apk/res-auto"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilePropertiesFragment" >
    
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

    
     <TextView
        android:id="@+id/file_properties_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="30dp" />
          
     <com.mega.components.RoundedImageView 
         android:id="@+id/file_properties_image"
         android:layout_width="wrap_content"
         android:layout_height="270dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/file_properties_name"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         rounded:corner_radius="10dp" 
         rounded:border_width="2dp"
         rounded:border_color="@color/border_file_properties" />
     
     <RelativeLayout
         android:id="@+id/file_properties_available_offline"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/file_properties_available_layout"
         android:orientation="horizontal"
         android:layout_below="@id/file_properties_image">
         
         <TableLayout       		
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content" 
       		    android:layout_gravity="center" >
       		    
             <TableRow>
                 
                 <TextView
		             android:id="@+id/file_properties_available_offline_text"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_available_offline"
		             android:paddingLeft="30dp"
		             android:paddingRight="50dp"
					 android:layout_gravity="center_vertical|left"
					 android:textStyle="bold"
					 android:textColor="@color/file_properties_text_available" />
                 
                 <TextView
		             android:id="@+id/file_properties_available_offline_on"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_available_offline_off"
					 android:layout_gravity="center_vertical|right"
					 android:textStyle="bold"
					 android:textColor="@color/file_properties_text_available" />
                 
             	<com.mega.components.MySwitch
			        android:id="@+id/file_properties_switch"
			        style="@style/mySwitchStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="0dp"
			        android:layout_marginRight="5dp"
			        android:layout_marginTop="10dp"
			        android:layout_marginLeft="5dp"
			        android:layout_gravity="center_vertical|center_horizontal"
			        mySwitch:textOff=""
			        mySwitch:textOn=""
			        mySwitch:textOnThumb="false"
			        mySwitch:thumb="@drawable/switch_thumb"
			        mySwitch:track="@drawable/switch_track" />
                 
                 <TextView
		             android:id="@+id/file_properties_available_offline_off"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_available_offline_on"
		             android:textColor="@color/file_properties_text_available"
					 android:layout_gravity="center_vertical|left"
					 android:textStyle="bold" />
             	
             </TableRow>
       		    
         </TableLayout>
         
     </RelativeLayout>
     
     <TableLayout 
         android:layout_width="wrap_content"
       	 android:layout_height="wrap_content" 
       	 android:layout_gravity="center"
       	 android:layout_below="@id/file_properties_available_offline" >
         
         <TableRow>
             <TextView
		             android:id="@+id/file_properties_info_menu_size"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_info_size"
		             android:textColor="@color/file_properties_info_menu"
					 android:layout_gravity="center_vertical|left"
					 android:textStyle="bold"
					 android:paddingLeft="30dp"
					 android:paddingTop="15dp" />
             
             <TextView
		             android:id="@+id/file_properties_info_data_size"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="2.4 MB"
		             android:textColor="@color/file_properties_info_data"
					 android:layout_gravity="center_vertical|left" 
					 android:paddingLeft="4dp"
					 android:paddingTop="15dp"/>
         </TableRow>
         
         <TableRow>
             <TextView
		             android:id="@+id/file_properties_info_menu_added"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_info_added"
		             android:textColor="@color/file_properties_info_menu"
					 android:layout_gravity="center_vertical|left"
					 android:textStyle="bold"
					 android:paddingLeft="30dp"
					 android:paddingTop="7dp" />
             
             <TextView
		             android:id="@+id/file_properties_info_data_added"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="November 22, 2013"
		             android:textColor="@color/file_properties_info_data"
					 android:layout_gravity="center_vertical|left"
					 android:paddingLeft="4dp"
					 android:paddingTop="7dp" />
         </TableRow>
         
         <TableRow>
             <TextView
		             android:id="@+id/file_properties_info_menu_modified"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="@string/file_properties_info_modified"
		             android:textColor="@color/file_properties_info_menu"
					 android:layout_gravity="center_vertical|left"
					 android:textStyle="bold"
					 android:paddingLeft="30dp"
					 android:paddingTop="7dp"
					 android:paddingBottom="15dp" />
             
             <TextView
		             android:id="@+id/file_properties_info_data_modified"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:text="November 23, 2013"
		             android:textColor="@color/file_properties_info_data"
					 android:layout_gravity="center_vertical|left"
					 android:paddingLeft="4dp"
					 android:paddingTop="7dp"
					 android:paddingBottom="15dp" />
         </TableRow>
     </TableLayout>
     <!-- 
    <Button
        android:id="@+id/buttonVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOcultar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/botonVerActionBar" />

    <Button
        android:id="@+id/buttonOcultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/botonOcultarActionBar" />
-->
</RelativeLayout>
</ScrollView>